<resources>
    <string name="app_name">Selfie Cam</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="image_name">Image Name:</string>
    <string name="image_dim">Image Dimensions:</string>
    <string name="gallery_title">Gallery</string>
    <string name="info_tag">About</string>
    <string name="name_tag">Jasdeep Nijjar</string>
    <string name="class_tag">Computer Vision CSCI-4220U (Winter 2018)</string>
    <string name="school_tag">University of Ontario Institute of Technology</string>
    <string name="instructions">Press detect to enable Haar cascade smile detector and the app
        will take pictures if it sees a smile; there is a 5 second timeout before the next image
        is saved. Clicking on the snapshots on the right side show gallery view with delete
        button. Full gallery button includes image switcher. Saves imaages taken to selfie-cam
        folder.
    </string>
    <string name="reference">Using OpenCV 3</string>
    <string name="icon_ref">Icon made by Bogdan Rosu from https://www.flaticon.com/</string>
    <string name="icon_link">https://www.flaticon.com/authors/bogdan-rosu</string>
</resources>
