<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBg"
    tools:context="uoit.cv.selfiecam.About">

    <TextView
        android:id="@+id/info_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/info_tag"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_about"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/name_tag"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/school_tag"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/class_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/school"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/class_tag"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/class_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/instructions"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/reference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructions"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/reference"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reference"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        app:srcCompat="@drawable/logo"/>
</RelativeLayout>
